[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Buildings/Tower.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Building/BuildNodeGround.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Buildings/Tower2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Buildings/Tower3.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Buildings/Ghost.tscn" type="PackedScene" id=5]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[node name="BuildNode25" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9854, 1.14446, -0.383543 )
script = ExtResource( 2 )
spikes = ExtResource( 1 )
bear_trap = ExtResource( 3 )
bomb = ExtResource( 4 )
ghost = ExtResource( 5 )

[node name="Highlight" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )
[connection signal="input_event" from="." to="." method="_on_BuildNode_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_BuildNode_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BuildNode_mouse_exited"]
